    so that balancer only selects blocks to move from those nodes.  (szetszwo)

    HDFS-8311. DataStreamer.transfer() should timeout the socket InputStream.
    (Esteban Gutierrez via Yongjun Zhang)

    HDFS-8983. NameNode support for protected directories. (Arpit Agarwal)

    HDFS-8046. Allow better control of getContentSummary (kihwal)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-8219. setStoragePolicy with folder behavior is different after cluster restart.
    (surendra singh lilhore via Xiaoyu Yao)

    HDFS-8055. NullPointerException when topology script is
    missing. Contributed by Anu Engineer.

    HDFS-9009. Send metrics logs to NullAppender by default. (Arpit Agarwal)

Release 2.7.2

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via Yi Liu)

Release 2.7.1

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8595. TestCommitBlockSynchronization fails with NPE. (Arpit agarwal)

Release 2.7.0

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-3107. Introduce truncate. (Plamen Jeliazkov via shv)

    HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)

    HDFS-6673. Add delimited format support to PB OIV tool. (Eddy Xu via wang)

    HDFS-7655. Expose truncate API for Web HDFS. (yliu)

    HDFS-7604. Track and display failed DataNode storage locations
    in NameNode. (Chris Nauroth)

  IMPROVEMENTS

    HDFS-7470. SecondaryNameNode need twice memory when calling
    reloadFromImageFile. (zhaoyunjiong via cnauroth)

    HDFS-7606. Fix potential NPE in INodeFile.getBlocks(). (Byron Wong via shv)

    HDFS-7738. Revise the exception message for recover lease; add more truncate
    tests such as truncate with HA setup, negative tests, truncate with other
    operations and multiple truncates.  (szetszwo)

    HDFS-7058. Tests for truncate CLI. (Dasha Boudnik via shv)
